Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2883

[Plasma] Compilation warnings

    XMLWordPrintableJSON

Details

    Description

      Not sure that's recent, but I get the following warnings with clang 6.0.1:

      [37/169] Building CXX object src/plasma/CMakeFiles/plasma_objlib.dir/client.cc.o
      ../src/plasma/client.cc:283:3: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
        CudaDeviceManager::GetInstance(&manager_);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~
      ../src/plasma/client.cc:411:7: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
            writer.WriteAt(object.data_size, metadata, metadata_size);
            ^~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      2 warnings generated.
      [53/169] Building CXX object src/plasma/CMakeFiles/plasma_objlib.dir/protocol.cc.o
      ../src/plasma/protocol.cc:134:5: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
          object->ipc_handle->Serialize(arrow::default_memory_pool(), &handle);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/plasma/protocol.cc:174:5: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
          CudaIpcMemHandle::FromBuffer(message->ipc_handle()->handle()->data(),
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/plasma/protocol.cc:506:7: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
            object.ipc_handle->Serialize(arrow::default_memory_pool(), &handle);
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/plasma/protocol.cc:541:7: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
            CudaIpcMemHandle::FromBuffer(message->handles()->Get(handle_pos)->handle()->data(),
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      4 warnings generated.
      [63/169] Building CXX object src/plasma/CMakeFiles/plasma_store.dir/store.cc.o
      ../src/plasma/store.cc:117:3: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
        CudaDeviceManager::GetInstance(&manager_);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~
      ../src/plasma/store.cc:164:5: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
          manager_->GetContext(device_num - 1, &context_);
          ^~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/plasma/store.cc:194:7: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
            context_->Allocate(data_size + metadata_size, &gpu_handle);
            ^~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/plasma/store.cc:220:5: warning: ignoring return value of function declared with 'warn_unused_result' attribute [-Wunused-result]
          gpu_handle->ExportForIpc(&entry->ipc_handle);
          ^~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~
      4 warnings generated.
      [125/169] Building CXX object src/plasma/CMakeFiles/client_tests.dir/test/client_tests.cc.o
      ../src/plasma/test/client_tests.cc:462:35: warning: 'kDeprecatedPlasmaDefaultReleaseDelay' is deprecated: PLASMA_DEFAULT_RELEASE_DELAY is deprecated [-Wdeprecated-declarations]
        int64_t default_delay = plasma::kDeprecatedPlasmaDefaultReleaseDelay;
                                        ^
      ../src/plasma/client.h:37:16: note: 'kDeprecatedPlasmaDefaultReleaseDelay' has been explicitly marked deprecated here
      __attribute__((deprecated("PLASMA_DEFAULT_RELEASE_DELAY is deprecated")))
                     ^
      1 warning generated.
      

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m