ARROW-2883: [C++] Fix Clang warnings in code built with -DARROW_GPU=ON

I also opened issues ARROW-2887, ARROW-2888 which surfaced on handling these warnings

Author: Wes McKinney <wesm+git@apache.org>

Closes #2298 from wesm/ARROW-2883 and squashes the following commits:

4ab24744 <Wes McKinney> Fix clang-6 warnings in GPU-related code paths