cpp/src/plasma/protocol.cc
@@ -131,7 +131,7 @@ Status SendCreateReply(int sock, ObjectID object_id, PlasmaObject* object,
   flatbuffers::Offset<fb::CudaHandle> ipc_handle;
   if (object->device_num != 0) {
     std::shared_ptr<arrow::Buffer> handle;
-    object->ipc_handle->Serialize(arrow::default_memory_pool(), &handle);
+    RETURN_NOT_OK(object->ipc_handle->Serialize(arrow::default_memory_pool(), &handle));
     ipc_handle =
         fb::CreateCudaHandle(fbb, fbb.CreateVector(handle->data(), handle->size()));
   }
@@ -171,8 +171,8 @@ Status ReadCreateReply(uint8_t* data, size_t size, ObjectID* object_id,
   object->device_num = message->plasma_object()->device_num();
 #ifdef PLASMA_GPU
   if (object->device_num != 0) {
-    CudaIpcMemHandle::FromBuffer(message->ipc_handle()->handle()->data(),
-                                 &object->ipc_handle);
+    RETURN_NOT_OK(CudaIpcMemHandle::FromBuffer(message->ipc_handle()->handle()->data(),
+                                               &object->ipc_handle));
   }
 #endif
   return PlasmaErrorStatus(message->error());
@@ -503,7 +503,7 @@ Status SendGetReply(int sock, ObjectID object_ids[],
 #ifdef PLASMA_GPU
     if (object.device_num != 0) {
       std::shared_ptr<arrow::Buffer> handle;
-      object.ipc_handle->Serialize(arrow::default_memory_pool(), &handle);
+      RETURN_NOT_OK(object.ipc_handle->Serialize(arrow::default_memory_pool(), &handle));
       handles.push_back(
           fb::CreateCudaHandle(fbb, fbb.CreateVector(handle->data(), handle->size())));
     }
@@ -538,8 +538,9 @@ Status ReadGetReply(uint8_t* data, size_t size, ObjectID object_ids[],
     plasma_objects[i].device_num = object->device_num();
 #ifdef PLASMA_GPU
     if (object->device_num() != 0) {
-      CudaIpcMemHandle::FromBuffer(message->handles()->Get(handle_pos)->handle()->data(),
-                                   &plasma_objects[i].ipc_handle);
+      const void* ipc_handle = message->handles()->Get(handle_pos)->handle()->data();
+      RETURN_NOT_OK(
+          CudaIpcMemHandle::FromBuffer(ipc_handle, &plasma_objects[i].ipc_handle));
       handle_pos++;
     }
 #endif
